RESOLVED FIXED 99928
[CSS] shadow from radius has wrong render in webkit
https://bugs.webkit.org/show_bug.cgi?id=99928
Summary [CSS] shadow from radius has wrong render in webkit
胡伟松
Reported 2012-10-21 02:40:46 PDT
please see the attachment as below!
Attachments
results in most browsers (172.52 KB, image/png)
2012-10-21 03:04 PDT, 胡伟松
no flags
test case of shadow (1.43 KB, text/html)
2012-10-21 03:06 PDT, 胡伟松
no flags
Patch (6.67 KB, patch)
2012-11-08 22:02 PST, Takashi Sakamoto
no flags
Patch (6.72 KB, patch)
2012-12-18 00:00 PST, Takashi Sakamoto
no flags
Patch (6.72 KB, patch)
2013-03-05 03:12 PST, Takashi Sakamoto
no flags
Patch for landing (13.70 KB, patch)
2013-03-05 17:10 PST, Takashi Sakamoto
no flags
Patch (13.75 KB, patch)
2013-03-11 21:15 PDT, Takashi Sakamoto
no flags
胡伟松
Comment 1 2012-10-21 03:01:24 PDT
render results of box shadow. please pay attention at the conner of the shadow
胡伟松
Comment 2 2012-10-21 03:04:38 PDT
Created attachment 169792 [details] results in most browsers the wrong results of shadow
胡伟松
Comment 3 2012-10-21 03:06:00 PDT
Created attachment 169793 [details] test case of shadow
Takashi Sakamoto
Comment 4 2012-11-08 22:02:49 PST
Takashi Sakamoto
Comment 5 2012-12-18 00:00:04 PST
Build Bot
Comment 6 2012-12-18 05:16:47 PST
Comment on attachment 179890 [details] Patch Attachment 179890 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/15413089 New failing tests: fast/frames/sandboxed-iframe-attribute-parsing.html
Takashi Sakamoto
Comment 7 2013-03-05 03:12:46 PST
WebKit Review Bot
Comment 8 2013-03-05 05:23:48 PST
Comment on attachment 191453 [details] Patch Attachment 191453 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17025144 New failing tests: fast/borders/border-radius-with-box-shadow.html
Simon Fraser (smfr)
Comment 9 2013-03-05 10:40:52 PST
Comment on attachment 191453 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=191453&action=review > Source/WebCore/ChangeLog:10 > + corners are rounded, but others are not rounded. Need to see each > + corners, i.e. top-left, top-right, bottom-left and bottom-right, and I think you're trying to say "Need to look at each corner independently".
Takashi Sakamoto
Comment 10 2013-03-05 17:10:52 PST
Created attachment 191608 [details] Patch for landing
Takashi Sakamoto
Comment 11 2013-03-05 17:13:32 PST
Comment on attachment 191453 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=191453&action=review Thank you for reviewing. I checked the new failing: fast/borders/border-radius-with-box-shadow and found that its actual image looked almost the same as its expected image. So I would like to rebaseline. >> Source/WebCore/ChangeLog:10 >> + corners, i.e. top-left, top-right, bottom-left and bottom-right, and > > I think you're trying to say "Need to look at each corner independently". Thanks. Done.
WebKit Review Bot
Comment 12 2013-03-05 17:18:03 PST
Attachment 191608 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/box-shadow/box-shadow-with-zero-radius-expected.html', u'LayoutTests/fast/box-shadow/box-shadow-with-zero-radius.html', u'LayoutTests/platform/chromium-linux/fast/borders/border-radius-with-box-shadow-expected.png', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/RoundedRect.cpp']" exit_code: 1 LayoutTests/platform/chromium-linux/fast/borders/border-radius-with-box-shadow-expected.png:0: Have to enable auto props in the subversion config file (/home/alancutter/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/alancutter/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Takashi Sakamoto
Comment 13 2013-03-11 21:15:40 PDT
WebKit Review Bot
Comment 14 2013-03-11 21:57:29 PDT
Comment on attachment 192631 [details] Patch Clearing flags on attachment: 192631 Committed r145474: <http://trac.webkit.org/changeset/145474>
WebKit Review Bot
Comment 15 2013-03-11 21:57:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.