[CSS] shadow from radius has wrong render in webkit https://bugs.webkit.org/show_bug.cgi?id=99928

Reviewed by Simon Fraser.

Source/WebCore:

No rounded cornder should be expanded in the mixed case, i.e. some
corners are rounded, but others are not rounded.
Need to look at each corner independently,
i.e. top-left, top-right, bottom-left and bottom-right, and
to expand corners whose width and height are larger than 0.

Test: fast/box-shadow/box-shadow-with-zero-radius.html

* platform/graphics/RoundedRect.cpp:
(WebCore::RoundedRect::Radii::expand):

LayoutTests:

* fast/box-shadow/box-shadow-with-zero-radius-expected.html: Added.
* fast/box-shadow/box-shadow-with-zero-radius.html: Added.
* platform/chromium-linux/fast/borders/border-radius-with-box-shadow-expected.png:
Rebaselined. Comparing the old one with the new one, both ones look almost
the same.


Canonical link: https://commits.webkit.org/130408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145474 268f45cc-cd09-0410-ab3c-d52691b4dbfc