Source/WebCore/platform/graphics/RoundedRect.cpp
@@ -61,17 +61,22 @@ void RoundedRect::Radii::scale(float factor)
 
 void RoundedRect::Radii::expand(int topWidth, int bottomWidth, int leftWidth, int rightWidth)
 {
-    m_topLeft.setWidth(max<int>(0, m_topLeft.width() + leftWidth));
-    m_topLeft.setHeight(max<int>(0, m_topLeft.height() + topWidth));
-
-    m_topRight.setWidth(max<int>(0, m_topRight.width() + rightWidth));
-    m_topRight.setHeight(max<int>(0, m_topRight.height() + topWidth));
-
-    m_bottomLeft.setWidth(max<int>(0, m_bottomLeft.width() + leftWidth));
-    m_bottomLeft.setHeight(max<int>(0, m_bottomLeft.height() + bottomWidth));
-
-    m_bottomRight.setWidth(max<int>(0, m_bottomRight.width() + rightWidth));
-    m_bottomRight.setHeight(max<int>(0, m_bottomRight.height() + bottomWidth));
+    if (m_topLeft.width() > 0 && m_topLeft.height() > 0) {
+        m_topLeft.setWidth(max<int>(0, m_topLeft.width() + leftWidth));
+        m_topLeft.setHeight(max<int>(0, m_topLeft.height() + topWidth));
+    }
+    if (m_topRight.width() > 0 && m_topRight.height() > 0) {
+        m_topRight.setWidth(max<int>(0, m_topRight.width() + rightWidth));
+        m_topRight.setHeight(max<int>(0, m_topRight.height() + topWidth));
+    }
+    if (m_bottomLeft.width() > 0 && m_bottomLeft.height() > 0) {
+        m_bottomLeft.setWidth(max<int>(0, m_bottomLeft.width() + leftWidth));
+        m_bottomLeft.setHeight(max<int>(0, m_bottomLeft.height() + bottomWidth));
+    }
+    if (m_bottomRight.width() > 0 && m_bottomRight.height() > 0) {
+        m_bottomRight.setWidth(max<int>(0, m_bottomRight.width() + rightWidth));
+        m_bottomRight.setHeight(max<int>(0, m_bottomRight.height() + bottomWidth));
+    }
 }
 
 void RoundedRect::inflateWithRadii(int size)
